decompiler/tests/snapshots/test_tool__x86_64_callconv__func064.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func064 0x40124c+5 (file 0x124c)
          40124c: 8a 44 24 22             mov al,[rsp+22h]
          401250: c3                      ret

function type: "func064" func (arg0 *void <TypeID(1v1)>,
                               arg1 small <TypeID(785v1)>,
                               arg2 big <TypeID(795v1)>) uint8_t <TypeID(789v1)>
WARNING: 1 errors; only 2 out of 3 parameters could be mapped to registers and stack slots
  #0: type has no alignment?
0 warnings.


mil program = 
program  60 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
   43 r45: TypeID(2v1) <- Ancestral(AncestralName("arg0"))
   44 r14: TypeID(2v1) <- Get(r45)
   45 r46: TypeID(2v1) <- Ancestral(AncestralName("arg1"))
   46 r47: TypeID(2v1) <- Part { src: r46, offset: 0, size: 8 }
   47 r15: TypeID(2v1) <- Get(r47)
   48 r48: TypeID(2v1) <- Part { src: r46, offset: 8, size: 8 }
   49 r19: TypeID(2v1) <- Get(r48)
0x40124c:
   50 r46: TypeID(2v1) <- Const { value: 34, size: 8 }
   51 r46: TypeID(2v1) <- Arith(Add, r46, r12)
   52 r45: TypeID(2v1) <- LoadMem { addr: r46, size: 1 }
   53 r47: TypeID(2v1) <- Part { src: r16, offset: 1, size: 7 }
   54 r16: TypeID(2v1) <- Concat { lo: r45, hi: r47 }
0x401250:
   55 r45: TypeID(2v1) <- Void
   56 r45: TypeID(2v1) <- Concat { lo: r45, hi: r16 }
   57 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 1 }
   58 r47: TypeID(2v1) <- SetReturnValue(r45)
   59 r47: TypeID(2v1) <- Control(Ret)


ssa pre-xform:
ssa program  60 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
         r15: ? <- Ancestral(AncestralName("RAX"))
         r50: ? <- Const { value: 34, size: 8 }
         r51: ? <- Arith(Add, r50, r11)
         r52: ? <- LoadMem { addr: r51, size: 1 }
         r53: ? <- Part { src: r15, offset: 1, size: 7 }
         r54: ? <- Concat { lo: r52, hi: r53 }
         r56: ? <- Concat { lo: r55, hi: r54 }
         r57: ? <- Part { src: r56, offset: 0, size: 1 }
         r58: ? <- SetReturnValue(r57)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r15, r50, r51, r52, r53, r54, r55, r56, r57, r58]
  domtree:
    BlockID(0)

ssa post-xform:
fold_subregs: Part { src: r15, offset: 1, size: 7 }
fold_subregs: Part { src: r54, offset: 0, size: 1 }
fold_subregs: Part { src: r15, offset: 1, size: 7 }
ssa program  60 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
         r51: ? <- ArithK(Add, r11, 34)
         r52: ? <- LoadMem { addr: r51, size: 1 }
         r58: ? <- SetReturnValue(r52)



T0: {
  ;
  return [pre:RSP + 34]:1
}
